# gamedata-recorder

./: BUILD.md  CONTRIBUTING.md  Cargo.toml  GAMES.md  LICENSE  README.md  WINDOWS_TEST_CHECKLIST.md  test-20rounds.sh  test-30rounds-quick.sh  test-30rounds.sh  test-local.sh
.github/workflows/: build.yml  rust-build.yml
backend/: SECURITY_FIXES.md  conftest.py  conftest_security.py  main.py  models.py  monitor.sh  pytest.ini  requirements.txt  test_api.py  test_security.py  test_security_fixes.py
backend/data/uploads/: bc148afc-95e0-49a0-85d2-d0005ca92b65.json
backend/data/users/: user_a2dfeccad88d.json
build-resources/scripts/: build-arm64.ps1  build.ps1
crates/constants/src/: encoding.rs  lib.rs  supported_games.json  unsupported_games.json  unsupported_games.rs
docs/: BETA_RECRUITMENT.md  BETA_TESTING_PLAN.md  CLOUDFLARE_TUNNEL_SETUP.md  DEPLOYMENT.md  PRODUCTIZATION_ROADMAP.md  api-spec.md  input_format.md  landing-page-copy.md
installer/: gamedata-recorder.iss
src/: app_state.rs  config.rs  main.rs  output_types.rs  tokio_thread.rs
src/api/: mod.rs  multipart_upload.rs  user_upload.rs
src/record/: fps_logger.rs  input_recorder.rs  local_recording.rs  mod.rs  obs_embedded_recorder.rs  recorder.rs  recording.rs
src/system/: ensure_single_instance.rs
src/ui/: consent.md  mod.rs  notification.rs  tray_icon.rs
src/ui/views/: login.rs  mod.rs
src/ui/views/main/: mod.rs  upload_manager.rs
src/ui/views/main/windows/: games.rs
src/upload/: mod.rs  progress_sender.rs  upload_folder.rs  upload_tar.rs
src/validation/: mod.rs
tools/update-games/src/: main.rs
tools/vm/: LINUX_DEV_SETUP.md
website/: index.html  vercel.json
